[Fix] agregando mas configuracionees de cors